workshop04/wpapp-deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata: 
 namespace: wpns
 name: wpapp-deploy
 labels:
  name: wpapp-deploy
spec:
 replicas: 1
 selector: 
  matchLabels:
   name: wpapp-po
 template:
  metadata:
   name: wpapp-po
   labels:
    name: wpapp-po
  spec: 
   volumes:
   - name: wp-app-vol
     persistentVolumeClaim: 
      claimName: data-wpapp-pvc
   containers:
   - name: wpapp-container
     image: wordpress:5.9.2
     imagePullPolicy: IfNotPresent
     ports: 
     - name: wpapp-port 
       containerPort: 80
     volumeMounts: 
     - name: wp-app-vol
       mountPath: /var/www/html

---
apiVersion: v1
kind: Service
metadata:
 namespace: wpns
 name: wpapp-svc
 labels:
  name: wpapp-svc
spec:
 type: ClusterIP
 selector: 
  name: wpapp-po
 ports:
 - port: 80
   targetPort: wpapp-port
