workshop04/wp-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 namespace: wpns
 name: wpapp-ing
 labels:
  name: wpapp-ing
 annotations:
  nginx.ingress.kubernetes.io/limit-rps: "10"
spec:
 ingressClassName: nginx
 rules:
 - host: wp-144.126.243.200.nip.io
   http:
    paths:
    - path: /
      pathType: Prefix
      backend: 
       service: 
        name: wpapp-svc
        port: 
         number: 80
